# friday-back

./: .gitignore  Cargo.toml  README.md  llm.py  server.env
code/: llm.py
code/real-back/: Cargo.toml
scripts/: bluetooth_locator.py  robot.py  test.py
src/: main.rs  modelo.rs  server_struct.rs
